fix word wrapping

--- a/frontend/stylesheets/base/chat.scss
+++ b/frontend/stylesheets/base/chat.scss
@@ -4,6 +4,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
+ul li {
+    word-break: break-all;
+}
+
 .registrationSplash {
   display: flex;
   flex-direction: column;
